--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         Html 5 
     </canvas>
     <script src="main.js"></script>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
 </body>
 </html>
