--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>lab 1</title>
-</head>
-<body>
-    <canvas id="square" width="500px" height="500px">
-        Html 5 
-    </canvas>
+  </head>
+  <body>
+    <canvas id="square" width="600px" height="600px"> Html 5 </canvas>
     <script src="main.js"></script>
     <!-- <script src="main.js"></script> -->
-</body>
+  </body>
 </html>
