fixing file system

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>lab 1</title>
   </head>
   <body>
-    <canvas id="square" width="600px" height="600px"> Html 5 </canvas>
+    <div class="container">
+      <canvas id="square" width="600px" height="600px"> Html 5 </canvas>
+      <canvas id="circle" width="600px" height="600px"> Html 5 </canvas>
+    </div>
+    <script src="utils.js"></script>
+    <script src="Triangles.js"></script>
+    <script src="square.js"></script>
+    <script src="sierpinski.js"></script>
+    <script src="circle.js"></script>
     <script src="main.js"></script>
     <!-- <script src="main.js"></script> -->
   </body>
