--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   <body>
     <div class="container">
       <canvas id="square" width="600px" height="600px"> Html 5 </canvas>
-      <canvas id="circle" width="600px" height="600px"> Html 5 </canvas>
+      <!-- <canvas id="circle" width="600px" height="600px"> Html 5 </canvas> -->
     </div>
+    <button id="direction">Change Direction</button>
     <script src="utils.js"></script>
     <script src="Triangles.js"></script>
     <script src="square.js"></script>
     <script src="sierpinski.js"></script>
     <script src="circle.js"></script>
+    <script src="rotating-square.js"></script>
     <script src="main.js"></script>
     <!-- <script src="main.js"></script> -->
   </body>
