--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
       <canvas id="square" width="600px" height="600px"> Html 5 </canvas>
       <!-- <canvas id="circle" width="600px" height="600px"> Html 5 </canvas> -->
     </div>
-    <button id="direction">Change Direction</button>
+    <button onclick="rotateX()">Rotate X</button>
+    <button onclick="rotateY()">Rotate Y</button>
+    <button onclick="rotateZ()">Rotate Z</button>
+    <button onclick="move()">Move</button>
+    <button onclick="SlowMotion()">Slow motion</button>
+    <button onclick="stop()">Stop</button>
     <script src="utils.js"></script>
     <script src="Triangles.js"></script>
     <script src="square.js"></script>
     <script src="sierpinski.js"></script>
     <script src="circle.js"></script>
     <script src="rotating-square.js"></script>
+    <script src="rotating-cube.js"></script>
     <script src="main.js"></script>
     <!-- <script src="main.js"></script> -->
   </body>
